@@ -1,3 +1,8 @@
+2006-08-08  David Schleef  <ds@schleef.org>
+
+	* esddsp.c: intercept open64() and other 64-bit variants.
+	  Patch from Peter Åstrand.  Fixes #312665.
+
 2006-08-07  David Schleef  <ds@schleef.org>
 
 	* configure.ac: Fix linker flags with CoreAudio.  Fixes #313433.
